suse-demo/kubernetes/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rancher-env-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rancher-env-app
  template:
    metadata:
      labels:
        app: rancher-env-app
    spec:
      containers:
      - name: rancher-env-app
        image: jpgouin/suse-demo
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: data-volume
          mountPath: /data
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: sample-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: rancher-env-app-service
spec:
  selector:
    app: rancher-env-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-env-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: suseapp.3.92.22.246.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rancher-env-app-service
            port:
              number: 8080
